SMG2: CI suggested cleanup/basic refactorings/formating